2010-05-04  Andrew John Hughes  <ahughes@redhat.com>

	* configure.ac:
	Add output to GMP directory detection and
	only perform when compiling GMP.

2010-05-04  Mike Stump  <mikestump@comcast.net>

	* configure.ac:
	Allow prefix, libdir and includedir of GMP
	to be specified via --with-gmp, --with-gmp-include
	and --with-gmp-lib.

2010-04-28  Andrew John Hughes  <ahughes@redhat.com>

	* gnu/javax/print/ipp/IppPrintService.java:
	(printerAttr): Add generic typing.
	(printServiceAttributeListener): Likewise.
	(flavors): Likewise.
	(printerUris): Likewise.
	(IppPrintService(URI uri, String username, String password)):
	Use generic types in initialising listener set.
	(getPrinterAttributes()): Add generic types.  Remove cast.
	(getPrinterAttributeSet(Class<T>)): Return a set containing
	attributes of type T.  Now creates a new set and checks that
	all elements of the original set can be cast and added to this
	new set.
	(getPrinterDefaultAttribute(Class<? extends Attribute>)): Add
	generic types.
	(processResponse()): Add generic types.
	(getAttribute(Class<T>)): Use generic types corresponding to
	parent interface.
	(getSupportedAttributeCategories()): Use generic types.
	(getSupportedAttributeValues()): Likewise.
	(handleSupportedAttributeValuesResponse(IppResponse,Class<? extends Attribute>)):
	Likewise.
	(isAttributeCategorySupported(Class<? extends Attribute>)): Likewise.
	* gnu/javax/print/ipp/IppResponse.java:
	(parseResponse(InputStream)): Use generic types.
	(parseAttributes(Map<Class<? extends Attribute>, Set<Attribute>, DataInputStream)):
	Likewise.
	(addAttribute(Map<Class<? extends Attribute>, Set<Attribute>>, Attribute): Likewise.
	(IppResponse(URI, short)): Create lists with appropriate type parameters.
	(getJobAttributes()): Use generic return type.
	(getOperationAttributes()): Likewise.
	(getPrinterAttributes()): Likewise.
	(getUnsupportedAttributes()): Likewise.
	* gnu/javax/print/ipp/attribute/supported/CompressionSupported.java: